Added intial codes of the views

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,13 @@
 	<title>Coder|Dashboard</title>
 </head>
 <body>
-	<h1>Welcome to Coder Dashboard</h1>
+<div>
+	<ul>
+		<li>User 1</li>
+		<li>User 2</li>
+		<li>User 3</li>
+	</ul>
+</div>
+	
 </body>
 </html>
