--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Coder|Dashboard</title>
+	<title><%= title %></title>
 </head>
 <body>
 <div>
@@ -11,6 +11,5 @@
 		<li>User 3</li>
 	</ul>
 </div>
-	
 </body>
 </html>
