Add travis ci yml

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,8 @@
 		<input type="text" name="email">
 		<input type="password" name="password">
 		<input type="submit" name="submit">
+
+		<a href="/auth/github">Login with GitHub</a>
 	</form>
 </body>
 </html>
