Remove useless dependencies

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="ui main text container">
-    <h1>Welcome to the dashboard of MCKVCC</h1>
+    <h1>Welcome to MCKVCC</h1>
 
     <div class="list">
 		<div class="ui active centered inline loader"></div>
