--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,13 +2,72 @@
 <html>
 <head>
 	<title><%= title %></title>
+	<%- include('./includes/meta-includes'); %>
+	<%- include('./includes/css-includes'); %>
+	<style type="text/css">
+    body {
+      background-color: #DADADA;
+    }
+    body > .grid {
+      height: 100%;
+    }
+    .image {
+      margin-top: -100px;
+    }
+    .column {
+      max-width: 450px;
+    }
+  </style>
+
 </head>
 <body>
-	<form>
-		<input type="text" name="name">
-		<input type="text" name="email">
-		<input type="password" name="password">
-		<input type="submit" name="submit">
-	</form>
+	<div>
+		<%- include('./includes/header-includes'); %>
+	</div>
+
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <h2 class="ui teal image header">
+      <div class="content">
+        Sign-up to your account
+      </div>
+    </h2>
+    <form class="ui large form">
+      <div class="ui stacked segment">
+      <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <input type="text" name="name" placeholder="Your name">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <input type="text" name="email" placeholder="E-mail address">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <input type="password" name="password" placeholder="Password">
+          </div>
+        </div>
+        <button class="ui fluid large teal submit button" type="submit">Sign-up</button>
+      </div>
+
+      <div class="ui error message"></div>
+      <div class="ui message">
+       Existing User? <a href="/login">Login</a>
+    </div>
+
+    </form>
+
+    
+  </div>
+</div>
+
+
+
+	
 </body>
 </html>
