Add logic to signup page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,53 +20,45 @@
   </style>
 </head>
 <body>
-	<div>
-			<%- include('./includes/header-includes'); %>
+	<%- include('./includes/header-includes'); %>
+<div class="ui main container">
+	<div class="ui middle aligned center aligned grid">
+	  <div class="column">
+	    <h2 class="ui teal image header">
+	      <div class="content">
+	        Log-in to your account
+	      </div>
+	    </h2>
+	    <form class="ui large form">
+	      <div class="ui stacked segment">
+	        <div class="field">
+	          <div class="ui left icon input">
+	            <i class="user icon"></i>
+	            <input type="text" name="email" placeholder="E-mail address" required="true">
+	          </div>
+	        </div>
+	        <div class="field">
+	          <div class="ui left icon input">
+	            <i class="lock icon"></i>
+	            <input type="password" name="password" placeholder="Password" required="true">
+	          </div>
+	        </div>
+	        <button class="ui fluid large teal submit button" type="submit">Login</button>
+	      </div>
+
+	      <div class="ui error message"></div>
+
+	    </form>
+
+	    <div class="ui message">
+	      New to us? <a href="/signup">Sign Up</a>
+	    </div>
+	  </div>
 	</div>
-
-	<br>
-	<!-- <form>
-		Email:<input type="email" name="email" required="true">
-		Password:<input type="password" name="password" required="true">
-		<input type="submit" name="submit" id="submit">
-	</form> -->
-	<body>
-
-<div class="ui middle aligned center aligned grid">
-  <div class="column">
-    <h2 class="ui teal image header">
-      <div class="content">
-        Log-in to your account
-      </div>
-    </h2>
-    <form class="ui large form">
-      <div class="ui stacked segment">
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="user icon"></i>
-            <input type="text" name="email" placeholder="E-mail address">
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="Password">
-          </div>
-        </div>
-        <button class="ui fluid large teal submit button" type="submit">Login</button>
-      </div>
-
-      <div class="ui error message"></div>
-
-    </form>
-
-    <div class="ui message">
-      New to us? <a href="/signup">Sign Up</a>
-    </div>
-  </div>
 </div>
 
-</body>
+
+
 	<%- include('./includes/js-includes'); %>
 	<script type="text/javascript">
 		$(document).ready(function(){
