--- a/views/includes/header-includes.ejs
+++ b/views/includes/header-includes.ejs
@@ -1,10 +1,9 @@
 <div class="ui large inverted menu">
   <div class="ui container">
-    <a href="#" class="header item">
+    <a href="/" class="header item">
       <!-- <img class="logo" src="/images/logo.png"> -->
       MCKVCC
     </a>
-    <a href="/" class="item">Home</a>
     <div class="right menu">
     	<a class="item" href="/signup">Sign Up</a>
     </a>
