Updated the ejs files and added css/style.css

--- a/views/includes/header-includes.ejs
+++ b/views/includes/header-includes.ejs
@@ -1,12 +1,5 @@
-<div class="ui large inverted menu">
-  <div class="ui container">
-    <a href="/" class="header item">
-      <!-- <img class="logo" src="/images/logo.png"> -->
-      MCKVCC
-    </a>
-    <div class="right menu">
-    	<a class="item" href="/signup">Sign Up</a>
-    </a>
-  </div>
-  </div>
+<div class="menu">
+    <a href="#" class="header item"><!-- <img class="logo" src="/images/logo.png"> -->MCKVIE-CC</a>
+    <a href="/" class="item">Home</a>
+    <a class="item" href="/signup">Sign Up</a>
 </div>
