--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,89 +2,16 @@
 <html>
 <head>
 	<title><%= title %></title>
-	<%- include('./includes/meta-includes'); %>
-	<%- include('./includes/css-includes'); %>
-	<style type="text/css">
-    body {
-      background-color: #DADADA;
-    }
-    body > .grid {
-      height: 100%;
-    }
-    .image {
-      margin-top: -100px;
-    }
-    .column {
-      max-width: 450px;
-    }
-  </style>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<%- include('./includes/header-includes'); %>
-<div class="ui main container">
-	<div class="ui middle aligned center aligned grid">
-	  <div class="column">
-	    <h2 class="ui teal image header">
-	      <div class="content">
-	        Log-in to your account
-	      </div>
-	    </h2>
-	    <form class="ui large form">
-	      <div class="ui stacked segment">
-	        <div class="field">
-	          <div class="ui left icon input">
-	            <i class="user icon"></i>
-	            <input type="text" name="email" placeholder="E-mail address" required="true">
-	          </div>
-	        </div>
-	        <div class="field">
-	          <div class="ui left icon input">
-	            <i class="lock icon"></i>
-	            <input type="password" name="password" placeholder="Password" required="true">
-	          </div>
-	        </div>
-	        <button class="ui fluid large teal submit button" type="submit">Login</button>
-	      </div>
-
-	      <div class="ui error message"></div>
-
-	    </form>
-
-	    <div class="ui message">
-	      New to us? <a href="/signup">Sign Up</a>
-	    </div>
-	  </div>
+	<div class = "loginbody">
+		<form class = "loginform">
+			<input type="text" name="email" class = "emaillogin" placeholder = "Email">
+			<input type="password" name="password" class = "passlogin" placeholder = "Password">
+			<input type="submit" name="submit" class = "loginsub" value="Login"><br>
+			<a href="/auth/github">Login with GitHub</a>
+		</form>
 	</div>
-</div>
-
-
-
-	<%- include('./includes/js-includes'); %>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			//handle form submission
-			$('form').submit(function(e){
-				e.preventDefault();
-		        var formData = {
-		            'email': $('input[name=email]').val(),
-		            'password': $('input[name=password]').val(),
-		        };
-		        console.log(formData)
-		        //make ajax post to server
-                $.ajax({
-                	type: 'POST',
-                	url: '/apis/login',
-                	data: formData,
-                	dataType: 'json',
-                	success: function(result){
-                		window.location.href('localhost:3000/signup')
-                	},
-                	error: function(error){
-                		console.log(error)
-                	}
-                })
-			})
-		})
-	</script>
 </body>
 </html>
