--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,22 +4,34 @@
 	<title><%= title %></title>
 	<%- include('./includes/meta-includes'); %>
 	<%- include('./includes/css-includes'); %>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <div>
 <%- include('./includes/header-includes'); %>
   <div class="ui main text container">
-    <h1>Welcome to MCKVCC</h1>
-
+    <div class = "banner">Welcome to MCKVIE-CC</div>
     <div class="list">
 		<div class="ui active centered inline loader"></div>
-<!-- 		<ul>
+		<ul>
+			<!-- Dummy data -->
 			<li>
 				<a href="">Name of User</a>
 				<span>( Team Name )</span>
 				<strong>Commits Count</strong>
 			</li>
-		</ul> -->
+			<li>
+				<a href="">Name of User</a>
+				<span>( Team Name )</span>
+				<strong>Commits Count</strong>
+			</li>
+			<li>
+				<a href="">Name of User</a>
+				<span>( Team Name )</span>
+				<strong>Commits Count</strong>
+			</li>
+			<!-- Dummy data ends -->
+		</ul>
 	</div>
   </div>
 
