--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,14 +4,16 @@
 	<title><%= title %></title>
 	<%- include('./includes/meta-includes'); %>
 	<%- include('./includes/css-includes'); %>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <%- include('./includes/header-includes'); %>
-	<div class="user-details">
-		<!--<h3>Name</h3>
-		<h5>Team Name</h5>
-		<h6><a href="#">Github URL</a></h6>-->
+
+	<div class="ui main text container">
+		<div class="user-details">
+<!-- 			<h3>Name</h3>
+			<h5>Team Name</h5>
+			<h6><a href="#">Github URL</a></h6> -->
+		</div>
 	</div>
 
 	<%- include('./includes/js-includes'); %>
