Add authentication using express-session and connect-mongo

--- a/views/includes/header-includes.ejs
+++ b/views/includes/header-includes.ejs
@@ -1,11 +1,12 @@
 <div class="ui large inverted menu">
   <div class="ui container">
-    <a href="/" class="header item">
+    <a href="/home" class="header item">
       <!-- <img class="logo" src="/images/logo.png"> -->
       MCKVCC
     </a>
     <div class="right menu">
-    	<a class="item" href="/signup">Sign Up</a>
+      <a class="item" href="/login">Login</a>
+      <a class="item" href="/signup">Signup</a>
     </a>
   </div>
   </div>
