Add logged user info as local to authenicated routes

--- a/views/includes/header-logged-includes.ejs
+++ b/views/includes/header-logged-includes.ejs
@@ -5,7 +5,7 @@
       MCKVCC
     </a>
     <div class="right menu">
-      <a class="item" href="/profile">Profile</a>
+      <a class="item" href="/profile/<%= userObj.id %>"><%= userObj.name %></a>
       <a class="item" href="/apis/logout">Logout</a>
     </a>
   </div>
