--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
 <%- include('./includes/header-includes'); %>
 	<div class="ui main text container">
     	<h1>Welcome to MCKVCC</h1>
+    	<img src="/images/anku.jpg">
     </div>
 </body>
 </html>
