--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,9 @@
 	<div class="ui main text container">
     	<h1>Welcome to MCKVCC</h1>
     	<img src="/images/anku.jpg">
+    	<div>
+    		Ankit Gaurav
+    	</div>
     </div>
 </body>
 </html>
